sended isUserCommentedBefore to front-end to prevent user from add comment if user commented before

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -294,6 +294,7 @@
     <script>
       let login_state = JSON.parse("<%= login_state %>");
       let newCommentSubmitted = JSON.parse("<%= newCommentSubmitted %>");
+      let isUserCommentedBefore = JSON.parse("<%= isUserCommentedBefore %>");
     </script>
     <script src="/libs/notyf/notyf.min.js"></script>
     <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
