--- a/public/styles/user-panel/global.scss
+++ b/public/styles/user-panel/global.scss
@@ -62,3 +62,15 @@
     }
   }
 }
+
+@media screen and (max-width: 640px) {
+  .main {
+    main {
+      .container {
+        .menu {
+          display: none;
+        }
+      }
+    }
+  }
+}
